# Proyecto-MLOPS-Base

./: .gitignore  dvc.yaml  environment.yml  pyproject.toml  requirements.txt  tasks.py
.dvc/: config
data/interim/: Cleaned_Dataset.csv.dvc
data/processed/: .gitignore  Procesed_Dataset.csv.dvc  Processed_Dataset.csv.dvc  Test_Dataset.csv.dvc  Train_Dataset.csv.dvc
models/: model_rf.pkl.dvc
outputs/2025-06-05/20-43-21/.hydra/: hydra.yaml
outputs/2025-06-05/20-46-52/.hydra/: hydra.yaml
outputs/2025-06-05/20-46-59/.hydra/: hydra.yaml
outputs/2025-06-05/20-47-07/.hydra/: hydra.yaml
outputs/2025-06-05/20-52-45/.hydra/: hydra.yaml
outputs/2025-06-05/20-55-06/.hydra/: hydra.yaml
outputs/2025-06-06/18-13-39/.hydra/: hydra.yaml
outputs/2025-06-06/18-13-48/.hydra/: hydra.yaml
outputs/2025-06-06/18-13-56/.hydra/: hydra.yaml
outputs/2025-06-06/18-14-00/.hydra/: hydra.yaml
outputs/2025-06-06/18-25-30/.hydra/: hydra.yaml
outputs/2025-06-06/18-25-31/.hydra/: hydra.yaml
outputs/2025-06-06/18-25-37/.hydra/: hydra.yaml
outputs/2025-06-06/18-25-39/.hydra/: hydra.yaml
outputs/2025-06-06/19-34-04/.hydra/: hydra.yaml
outputs/2025-06-07/08-25-39/.hydra/: hydra.yaml
outputs/2025-06-07/08-26-53/.hydra/: hydra.yaml
outputs/2025-06-07/08-38-41/.hydra/: hydra.yaml
reports/: params.json  scores.json
src/app_exception/: exception.py
src/config/: schemas.py
src/data_eng/: stage0_loading.py  stage1_ingestion.py  stage2_cleaning.py  stage3_labeling.py  stage4_splitting.py
src/model_eng/: stage1_2_train_evaluate.py  stage3_prediction.py
(+37 files in other folders)
